# app_settings

./: README.md  pyproject.toml
src/app_settings/: __init__.py  config.py  settings.py
